syntax = "proto3";

option csharp_namespace = "AdminService";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
package Admin;

service RefundOrderAdmin {   
  rpc RefundOrderUpdateStatus (RefundOrderUpdateStatusRequest) returns (RefundOrderUpdateStatusResult);
  
}
  
message RefundOrderUpdateStatusRequest{
  google.protobuf.StringValue Id = 1;
  int32 Status = 2;
}

message RefundOrderUpdateStatusResult{
  google.protobuf.StringValue ResultCode = 1;
  google.protobuf.StringValue ResultMessage = 2;
}