syntax = "proto3";

option csharp_namespace = "ReportService";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
package Report;

service RequestSupport {  
  rpc GetRequestSupportPaging (GetRequestSupportPagingRequest) returns (GetRequestSupportPagingResult);
  rpc GetDetailRequestSupport (GetDetailRequestSupportRequest) returns (GetDetailRequestSupportResult);
  rpc GetCountRequestSupportPending (GetCountRequestSupportPendingRequest) returns (GetCountRequestSupportPendingResult);
}

message GetRequestSupportPagingRequest{
  google.protobuf.Timestamp StartDate = 1;
  google.protobuf.Timestamp EndDate = 2;
  google.protobuf.StringValue Search = 3;
  google.protobuf.StringValue Service = 9;
  int32 Status = 4;
  int32 PageIndex = 5;
  int32 PageSize = 6;
  google.protobuf.StringValue SortExpr = 7;
  google.protobuf.StringValue SortDir = 8;
}

message GetRequestSupportPagingResult{
  google.protobuf.StringValue ResultCode = 1;
  google.protobuf.StringValue ResultMessage = 2;
  int32 TotalCount = 3;
  repeated RequestSupportItem Data = 4;
}

message GetDetailRequestSupportRequest{
	int32 Id = 1;
}

message GetDetailRequestSupportResult{
  google.protobuf.StringValue ResultCode = 1;
  google.protobuf.StringValue ResultMessage = 2;
  RequestSupportItem RequestSupport = 3;
  RequestSupportTransactionItem Transaction = 4;
}

message GetCountRequestSupportPendingRequest{}

message GetCountRequestSupportPendingResult {
	google.protobuf.StringValue ResultCode = 1;
	google.protobuf.StringValue ResultMessage = 2;
	int32 CountData = 3;
}


message RequestSupportItem {
  google.protobuf.Int32Value Id = 1;
  google.protobuf.StringValue TransactionId = 2;
  google.protobuf.StringValue Message = 3;
  google.protobuf.Int32Value Status = 4;
  google.protobuf.StringValue Note = 5;
  google.protobuf.StringValue Attachment = 6;
  bool SendMailAdmin = 7;
  google.protobuf.Timestamp CreateTime = 8;
  google.protobuf.Timestamp UpdateTime = 9;
  google.protobuf.StringValue UpdateBy = 10;
  google.protobuf.StringValue PhoneNumber = 11;
}

message RequestSupportTransactionItem {
	google.protobuf.StringValue Id = 1;
	google.protobuf.StringValue TrackingId = 2;
	google.protobuf.Timestamp CreateTime = 3;
	google.protobuf.StringValue ClientIp = 4;
	google.protobuf.StringValue BillingCode = 5;
	google.protobuf.StringValue ProductId = 6;
	google.protobuf.StringValue PackId = 7;
	double Amount = 8;
	double ActualAmount = 9;
	google.protobuf.StringValue Username = 10;
	int32 DiscountType = 11;
	double DiscountValue = 26;
	google.protobuf.StringValue ServiceId = 12;
	google.protobuf.StringValue CustomerId = 13;
	google.protobuf.StringValue Description = 14;
	google.protobuf.StringValue Partner = 15;
	int32 ResultStatus = 16;
	google.protobuf.StringValue ResultCode = 17;
	google.protobuf.Timestamp PayTime = 18;
	google.protobuf.Timestamp ResponseTime = 19;
	google.protobuf.StringValue PartnerTransactionId = 20;
	google.protobuf.Timestamp PartnerCreateTime = 21;
	google.protobuf.StringValue FundingSource = 22;
	google.protobuf.StringValue Extend1 = 23;
	google.protobuf.StringValue Extend2 = 24;
	int32 Quantity = 25;
}


